# plant-diagnosis-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: blank.yml
alembic/: env.py
alembic/versions/: 420086e21178_change_with_timezone.py  73e7f87610e1_create_initial_table.py  975b2f505033_re_change_with_timezone.py  9caea95eb101_create_users.py  b87fd41878b9_create_prediction.py
src/: config.py  gunicorn.conf.py  main.py
src/application/: account_application_service.py  prediction_application_service.py
src/domain/common/: date_time.py  nano_id.py
src/domain/prediction_model/: model_type.py  prediction_model.py  prediction_model_repository.py
src/domain/prediction_result/: prediction_result.py  prediction_result_repository.py  prediction_service.py
src/domain/user/: permission.py  role.py  role_type.py  user.py  user_repository.py
src/infrastructure/: database.py
src/infrastructure/common/: base_model.py  utils.py
src/infrastructure/prediction_model/: prediction_model_database.py  prediction_model_entity.py
src/infrastructure/prediction_result/: prediction_result_database.py  prediction_result_entity.py
src/infrastructure/user/: user_database.py  user_entity.py
src/interface/common/: authorization.py  common_schema.py
src/interface/prediction/: prediction_router.py  prediction_schema.py
src/interface/user/: account_router.py  account_schema.py
src/pytorch/cnn/: resnet18.py
