[tool.poetry]
name = "plant-diagnosis-backend"
version = "0.1.0"
description = ""
authors = ["xkurozaru <kurozaru.210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysqlclient = "^2.2.1"
python-dotenv = "^1.0.0"
nanoid = "^2.0.0"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = "^2.0.25"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
torch = {version = "^2.1.2+cpu", source = "pytorch"}
torchvision = {version = "^0.16.2+cpu", source = "pytorch"}
python-multipart = "^0.0.6"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
